--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "date-fns": "^4.1.0",
     "emoji-picker-react": "^4.15.1",
     "firebase": "^12.6.0",
+    "framer-motion": "^12.23.26",
     "lucide-react": "^0.545.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -26,6 +27,7 @@
     "react-otp-input": "^3.1.1",
     "react-router-dom": "^6.30.1",
     "react-select": "^5.10.2",
+    "react-toastify": "^11.0.5",
     "styled-components": "^6.1.19",
     "uuid": "^13.0.0"
   },
